# Econometrics_HW

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: .gitkeep  All shares Ekonometrika.xlsx
notebooks/: .gitkeep
src/: adf_analysis.py  data_loader.py  garch_analysis.py  run_volatility_analysis.py  volatility_garch.py  volatility_report.py  white_noise_analysis.py
src/utils/: result_dir.py
tests/: __init__.py  test_main.py
